<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_gradient"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_crop_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_calendar"
        android:textColor="@color/icons"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/layout_crop_legend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_crop_title"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/calendar_legend"
            android:textColor="@color/icons"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/layout_farming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical">

            <View
                android:id="@+id/view_legend1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:background="@color/legend_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/view_legend1"
                android:layout_toRightOf="@id/view_legend1"
                android:text="@string/farming"
                android:textColor="@color/icons"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_non_farming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical">

            <View
                android:id="@+id/view_legend2"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:background="@color/legend_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/view_legend2"
                android:layout_toRightOf="@id/view_legend2"
                android:text="@string/non_farming"
                android:textColor="@color/icons"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_festivals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical">

            <View
                android:id="@+id/view_legend3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:background="@color/legend_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/view_legend3"
                android:layout_toRightOf="@id/view_legend3"
                android:text="@string/festivals"
                android:textColor="@color/icons"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical">

            <View
                android:id="@+id/view_legend6"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:background="@color/legend_violet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/view_legend6"
                android:layout_toRightOf="@id/view_legend6"
                android:text="@string/calendar_others"
                android:textColor="@color/icons"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical">

            <View
                android:id="@+id/view_legend7"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/drawable_week_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/view_legend7"
                android:layout_toRightOf="@id/view_legend7"
                android:text="@string/Reset"
                android:textColor="@color/icons"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_crop_legend"
        android:layout_marginTop="10dp" />

</RelativeLayout>